solve em blocos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(df_to_array)
 export(parse_equation)
 export(simple_armington)
 export(solve_emr)
+export(solve_emr_block)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
