mensagem de sucesso

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(parse_equation)
 export(simple_armington)
 export(solve_emr)
 export(solve_emr_block)
+export(sum_emr)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
